
2010-06-03
  Bumped versionName to: 1.3.6
  Models no longer throw exception when unable to insert
  Removed duplicate last message update code

2010-06-02
  Bumped versionName 1.3.5 for release
  Worked around for posting bug in OAuthClient.
    OAuthClient.invoke throws an exception unless the return code is 200 OK.
    Posting a message returns a code of 201 Created.
  YammerActivity no longer does a full reload after a post.
    Added YammerActivity.updateMessages to just get new messages
  Shortened the reload after post delay to 500ms.
  Message.save no longer throws exception on failed insert.

2010-05-30
  Bumped versionName 1.3.4 for release
  Feed switch bug fix.
  Message reload bug fix.
    Use messages table to determine last message instead of network.last_message_id.
  Wrap CursorIndexOutOfBoundsException in YammerDataException
    Reload networks if we receive a YammerDataException while loading messages
  Cannonical nework switch bug fix.
  More code cleanup.

2010-05-27
  Bumped versionName 1.3.3 for release
  Network switch bug fix
  No feeds on first login bug fix
  Notification bug fix

2010-05-26
  Bumped versionName 1.3.2 for release
  Authentication flow bug fix
  Added test plan file

2010-05-24
  Bumped versionName 1.3.1 for release
  Imported trace source instead of using jars.
    I may want to log handled exceptions.
  Reworked service binding logic in YammerActivity.
    Should prevent NPEs in handling AUTHENTICATION_COMPLETE intent.
  Swallow exceptions from unbindService
    Exceptions were being thrown from Froyo
  Fixed bug preventing loading of messages after authentication.

2010-05-23
  Bumped versionCode for release (23)
  Fixed posting bug
  Fixed wake lock release bug

2010-05-20
  Bumped versionCode for release (22)
  More bug fixes
  Bumped versionCode for release (21)
  Fixed stupid login bug

2010-04-21
  Allow User to select network (ANDROID-53)
  More code cleanup

2010-03-09
  Fixed notifications (ANDROID-50)
