@@ -1,4 +1,7 @@
 
+2010-06-06
+  Cleaned up code in TweetListAdapter
+
 2010-06-03
   Bumped versionName to: 1.3.6
   Models no longer throw exception when unable to insert
